Fixed word wrapping on profile page

--- a/src/app/profile-menu/profile-menu.component.scss
+++ b/src/app/profile-menu/profile-menu.component.scss
@@ -114,6 +114,7 @@
       justify-self: center;
       font-size: 40px;
       padding-right: 20px;
+      white-space: nowrap;
     }
   }
 }
